--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   "dependencies": {
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
-    "xlsx": "^0.18.5",
     "csv-parser": "^3.0.0",
-    "puppeteer": "^22.6.5"
+    "puppeteer": "^22.6.5",
+    "string-similarity": "^4.0.4",
+    "xlsx": "^0.18.5"
   }
-} 
+}
