--- a/data/suggested-university-mapping.json
+++ b/data/suggested-university-mapping.json
@@ -102,12 +102,12 @@
   {
     "originalName": "University of Oxford",
     "source": "arwu",
-    "suggestedStandardizedName": "University of Salford"
+    "suggestedStandardizedName": "University of Oxford"
   },
   {
     "originalName": "University of Oxford",
     "source": "the",
-    "suggestedStandardizedName": "University of Salford"
+    "suggestedStandardizedName": "University of Oxford"
   },
   {
     "originalName": "University of Salford",
@@ -117,12 +117,12 @@
   {
     "originalName": "University of Oxford",
     "source": "usnews",
-    "suggestedStandardizedName": "University of Salford"
+    "suggestedStandardizedName": "University of Oxford"
   },
   {
     "originalName": "University of Oxford",
     "source": "qs",
-    "suggestedStandardizedName": "University of Salford"
+    "suggestedStandardizedName": "University of Oxford"
   },
   {
     "originalName": "University of Salford",
