--- a/data/suggested-university-mapping.json
+++ b/data/suggested-university-mapping.json
@@ -7735,6 +7735,16 @@
     "suggestedStandardizedName": "State University of New York at Buffalo"
   },
   {
+    "originalName": "State University of New York at Buffalo",
+    "source": "usnews",
+    "suggestedStandardizedName": "State University of New York at Buffalo"
+  },
+  {
+    "originalName": "State University of New York at Buffalo",
+    "source": "qs",
+    "suggestedStandardizedName": "State University of New York at Buffalo"
+  },
+  {
     "originalName": "University of Oregon",
     "source": "arwu",
     "suggestedStandardizedName": "University of Oregon"
@@ -15805,11 +15815,6 @@
     "suggestedStandardizedName": "Leipzig University"
   },
   {
-    "originalName": "(SUNY) Buffalo",
-    "source": "usnews",
-    "suggestedStandardizedName": "(SUNY) Buffalo"
-  },
-  {
     "originalName": "Qatar University",
     "source": "usnews",
     "suggestedStandardizedName": "Qatar University"
@@ -16588,11 +16593,6 @@
     "originalName": "Universitat Ramon Llull",
     "source": "qs",
     "suggestedStandardizedName": "Universitat Ramon Llull"
-  },
-  {
-    "originalName": "University at Buffalo SUNY",
-    "source": "qs",
-    "suggestedStandardizedName": "University at Buffalo SUNY"
   },
   {
     "originalName": "Essex, University of",
