--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,21 +4,39 @@ on:
   push:
     branches:
       - main
-      
-jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write # Grant write permission for the contents scope
+    # Exclude paths that trigger the rankings workflow
+    paths-ignore:
+      - 'frontend/public/data/*.xlsx'
+      - 'frontend/public/data/*.csv'
+      # Optionally exclude other non-deployment files
+      - 'README.md'
+      - '.github/workflows/update-rankings.yml'
 
+# Set permissions for GitHub Pages deployment
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout  Git Repository
+      - name: Checkout Git Repository
         uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x' # Use a recent Node.js version
+          node-version: '20.x'
+          cache: 'npm'
+          cache-dependency-path: 'frontend/package-lock.json'
 
       - name: Install Dependencies and Build
         run: |
@@ -26,8 +44,22 @@ jobs:
           npm ci
           npm run build
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./frontend/build # The directory containing the build output relative to the repository root 
+          path: './frontend/build'
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
